Add user-facing download directory paths
